--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/vim-django-support"]
 	path = bundle/vim-django-support
 	url = https://github.com/vim-scripts/vim-django-support.git
+[submodule "bundle/conque-shell"]
+	path = bundle/conque-shell
+	url = https://github.com/vim-scripts/Conque-Shell.git
