replace taglist with the superior tagbar

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,9 +37,6 @@
 [submodule "bundle/a"]
 	path = bundle/a
 	url = https://github.com/vim-scripts/a.vim.git
-[submodule "bundle/taglist"]
-	path = bundle/taglist
-	url = https://github.com/vim-scripts/taglist.vim.git
 [submodule "bundle/indexed-search"]
 	path = bundle/indexed-search
 	url = https://github.com/vim-scripts/IndexedSearch.git
@@ -85,3 +82,6 @@
 [submodule "bundle/conque-shell"]
 	path = bundle/conque-shell
 	url = https://github.com/vim-scripts/Conque-Shell.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = https://github.com/majutsushi/tagbar
