--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = https://github.com/majutsushi/tagbar
+[submodule "bundle/conque-shell"]
+	path = bundle/conque-shell
+	url = https://github.com/lrvick/Conque-Shell.git
