--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "bundle/conque-shell"]
 	path = bundle/conque-shell
 	url = https://github.com/lrvick/Conque-Shell.git
+[submodule "bundle/vim-node"]
+	path = bundle/vim-node
+	url = https://github.com/vim-scripts/node.js.git
