--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,9 @@
 [submodule "bundle/vim-node"]
 	path = bundle/vim-node
 	url = https://github.com/vim-scripts/node.js.git
+[submodule "bundle/vim-jslint"]
+	path = bundle/vim-jslint
+	url = https://github.com/vim-scripts/jslint.vim.git
+[submodule "bundle/vim-pyflakes"]
+	path = bundle/vim-pyflakes
+	url = https://github.com/kevinw/pyflakes-vim.git
