--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "bundle/vim-pyflakes"]
 	path = bundle/vim-pyflakes
 	url = https://github.com/kevinw/pyflakes-vim.git
+[submodule "bundle/vim-markdown"]
+	path = bundle/vim-markdown
+	url = https://github.com/hallison/vim-markdown.git
